--- a/themes/thenews/scss/_tiki-selectors.scss
+++ b/themes/thenews/scss/_tiki-selectors.scss
@@ -166,3 +166,14 @@ body.fullscreen {
 		border: none;
 	}
 }
+
+// navbars with too many items overflows the container
+.navbar-expand .navbar-nav {
+	flex-wrap: wrap;
+}
+
+@include media-breakpoint-up(lg) {
+	.navbar-expand-lg .navbar-nav {
+		flex-wrap: wrap;
+	}
+}
